# dusk-bytes

./: Cargo.toml  README.md
.github/workflows/: dusk_ci.yml
derive-hex/: CHANGELOG.md  Cargo.toml  README.md
derive-hex/src/: lib.rs
derive-hex/tests/: hex_test.rs
derive-macro/: Cargo.toml
derive-macro/src/: lib.rs
dusk-bytes/: Cargo.toml  README.md
dusk-bytes/src/: lib.rs  parse.rs  primitive.rs  serialize.rs
dusk-bytes/tests/: from_to_bytes_test.rs  parse_test.rs  serialize_test.rs
dusk-bytes/tests/common/: mod.rs
src/: errors.rs  lib.rs  parse.rs  serializable.rs
tests/: from_to_bytes_test.rs
