[package]
name = "derive-hex"
version = "0.1.3-rc.0"
authors = ["zer0 <matteo@dusk.network>"]
edition = "2024"
rust-version = "1.85"

readme = "README.md"

repository = "https://github.com/dusk-network/dusk-bytes"
keywords = ["hex", "no_std", "formatting"]
categories = ["no-std", "encoding"]
description = "A simple companion macro for dusk-bytes crate"
license = "MPL-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
